2018/03/23 stream-cli template changed